manifest/app/public/ingress.yaml
# Cilium Ingress
# This ingress is management for applications
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lilamaris-application-ingress
  annotations:
    ingressClassName: cilium
    ingress.cilium.io/force-https: "true"
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - lilamaris.kr
    secretName: lilamaris-wildcard-tls
  rules:
  - host: lilamaris.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-app
            port:
              number: 80
